--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "first.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -14,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/AdamOlczak/tealium_github_links/issues"
   },
-  "homepage": "https://github.com/AdamOlczak/tealium_github_links#readme"
+  "homepage": "https://github.com/AdamOlczak/tealium_github_links#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+  }
 }
