convert indetation to spaces Add rewire module remove module.export from first.js rewrite test to use rewire module

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/AdamOlczak/tealium_github_links#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "rewire": "^4.0.1"
   }
 }
